# solfoundry

./: .auditci.json  .coderabbit.yaml  .env.example  .gitattributes  .gitignore  AI_CODE_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  DOCS_UPDATE.md  Dockerfile.backend  Dockerfile.bounty-agent  Dockerfile.discord-bot  Dockerfile.frontend  Dockerfile.github-scraper  Mission_80_Prompt.md  Mission_80_Specs.md  Mission_82_Prompt.md  Mission_82_Specs.md  PR_DESCRIPTION.md  PUSH_TO_GITHUB.sh  README.md  REVIEW_FEEDBACK.txt  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_TOOLS.md  SOLANA_WALLET_ADDRESS.md  SOLUTION.md  SUBMISSION.md  TASKS-823.md  TASKS-825.md  TASKS-827.md  TASKS-833.md  TASKS-838.md  TASKS-846.md  TASKS.md  TUTORIAL_GETTING_STARTED.md  api-test.ts  autonomousAgent.test.js  autonomousAgent_backup.js  autonomous_bounty_hunter.py  (+45 more)
.github/: PULL_REQUEST_TEMPLATE.md
.rustyochestrator/: cache.json
AETHER_SOLUTIONS/: issue_822.md
SECURITY/: ESCROW_PEN_TEST.md  OWASP_TOP_10.md
__tests__/: OnboardingWizard.test.tsx  PRStatusTracker.test.tsx
admin/: README.md  package.json
agent/: README.md  __init__.py  __main__.py  analyst.py  coder.py  config.py  config.yaml  orchestrator.py  requirements.txt  scout.py  submitter.py
analytics/: README.md  package.json
app/: main.py  websocket.py
assets/: demo-screenshot.html
automaton/: issue-scraper.ts  marketplace.py  marketplace_schema.sql
backend/: .env  .env.example  Dockerfile  README.md  __init__.py  alembic.ini  api_lifecycle.py  app.py  bounty_lifecycle.py  database.py  exceptions.py  index.js  lifecycle_webhooks.py  main.py  models.py  pytest.ini  requirements.txt  ruff.toml  setup.py  submit_bounty.py  sync_output.txt  test.md  verify_middleware.py  webhook_handlers.py  websocket_events.py  websocket_server.py
bounty-497-program-testing/: .env.example  CHECKLIST.md  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
bounty-501-treasury/: README.md  docker-compose.yml  init-db.sql  package.json
bounty-hunter/: .env.example  README.md  SPEC.md  package.json
bounty_agent/: ARCHITECTURE.md  DEPLOYMENT.md  ECONOMIC_SYSTEM.md  QUICKSTART.md  README.md  SECURITY_AUDIT.md  __init__.py  config.py  demo.py  discovery.py  events.py  generate_demo_screenshot.py  llm_client.py  memory_manager.py  (+9 more)
contracts/bounty-registry/programs/bounty-registry/: Cargo.toml
contracts/bounty-registry/programs/bounty-registry/src/: lib.rs
programs/bounty-registry/: Anchor.toml  Cargo.toml  README.md
programs/bounty-registry/src/: lib.rs
programs/bounty-registry/tests/: bounty-registry.ts
telegram-bot/: .env.example  main.py  pyproject.toml
telegram-bot/bot/: __init__.py  app.py  config.py  formatters.py  github_client.py  handlers.py  models.py  subscription_store.py
telegram-bot/tests/: __init__.py  test_handlers.py  test_models.py
(+1877 files in other folders)
