[project]
name = "solfoundry-telegram-bot"
version = "0.1.0"
description = "Telegram bot for SolFoundry bounty notifications"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot==22.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-mock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
