[package]
name = "bounty-registry"
version = "0.1.0"
description = "SolFoundry on-chain bounty registry program — tracks bounties, contributors, and payouts on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bounty_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }

[dev-dependencies]
anchor-client = "0.30.1"
