[package]
name = "bounty-registry"
version = "0.1.0"
description = "On-chain bounty registry for SolFoundry — stores bounty metadata, statuses, and completion records as immutable on-chain data."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bounty_registry"

[features]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = ["anchor-lang/no-entrypoint"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
